tests/gen-test/test_out/compile-time-parse-out.txt
error: expected Ident | '\' | 'return' | Int but got 'run!'
 --> compile-time\root.ctl:1:85
  |
1 | fn sub(a : uint, b : uint) -> uint => a - b ; break ; #[entry] ; fn main -> uint => run! sub(1, 1) ;
  |                                                                                     ^^^^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr

